Fixed code blocks being shifted up in some cases, when used as inline code

--- a/src/page/style.css
+++ b/src/page/style.css
@@ -125,12 +125,12 @@ md-block img {
     border-radius: 8px;
 }
 
-md-block code {
+md-block pre code {
     overflow-x: auto;
     scrollbar-color: transparent transparent;
     transition: scrollbar-color 0.2s;
 }
 
-md-block code:hover {
+md-block pre code:hover {
     scrollbar-color: var(--pico-secondary-border) transparent;
 }
